Fixed artifact with UICollapseBox under Chromium

--- a/styles/widgets/collapsebox.css
+++ b/styles/widgets/collapsebox.css
@@ -1,6 +1,4 @@
 DIV.UICollapseBox {
-  border: 1px solid #666;
-
   -moz-border-radius: 6px;
   border-radius: 6px;
   -webkit-border-radius: 6px;
@@ -8,8 +6,10 @@ DIV.UICollapseBox {
 }
 
 DIV.UICollapseBoxHeader {
+  border: 1px solid #666;
   background-color: #aaa;
   padding: 0 2px;
+  border-width: 1px 1px 0 1px;
 
   -moz-border-radius: 6px 6px 0 0;
   border-radius: 6px 6px 0 0;
@@ -18,6 +18,8 @@ DIV.UICollapseBoxHeader {
 }
 
 DIV.UICollapseBoxCollapsedHeader {
+  border-width: 1px;
+
   -moz-border-radius: 6px;
   border-radius: 6px;
   -webkit-border-radius: 6px;
@@ -25,8 +27,14 @@ DIV.UICollapseBoxCollapsedHeader {
 }
 
 DIV.UICollapseBoxContainer {
-  border-top: 1px solid #666;
+  border: 1px solid #666;
   padding: 4px;
+  background-color: #F6F6F6;
+
+  -moz-border-radius: 0 0 6px 6px;
+  border-radius: 0 0 6px 6px;
+  -webkit-border-radius: 0 0 6px 6px;
+  -khtml-border-radius: 0 0 6px 6px;
 }
 
 TABLE.UICollapseBoxHeaderRowBlockHolder {
